[gd_scene load_steps=4 format=3 uid="uid://csj6cefebcprf"]

[ext_resource type="Script" uid="uid://cs55foxln00qk" path="res://ui/robot_builder/placement_preview.gd" id="1_ma4y1"]
[ext_resource type="Texture2D" uid="uid://0d08vljed4sa" path="res://icon.svg" id="2_xmfj3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ma4y1"]
radius = 13.9284

[node name="PlacementPreview" type="Area2D"]
script = ExtResource("1_ma4y1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ma4y1")

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.309804)
scale = Vector2(0.21875, 0.21875)
texture = ExtResource("2_xmfj3")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
